--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             margin: -50px -8px 0 -8px;
             height: 700px;
             background-size: cover;
-            background-image: url("https://i.imgur.com/v50xIMY.png");
+            background-image: url("https://user-images.githubusercontent.com/28853235/158935861-fb8f2462-c88c-4d16-8841-2baa9996c33f.png");
         }
 
         li {
@@ -29,20 +29,19 @@
 .pic{
 position:relative;
     height:850px;
-    position: center;
-margin: 0 120px 0 120px;
 }
 .insite{
     position:relative;
 
-    max-height:850px;
+    max-height:800px;
 }
 .onTop{
-    top:0;
+    right:0;
     left:0;
+    margin: auto;
     position:absolute;
-    max-height:850px;
-    z-index: 3;
+    max-height:800px;
+
 }
 .games{
     height: 450px;
@@ -90,10 +89,10 @@ transition: 2s all ease;
 <body>
     <header><div class="top">yes</div>
             <ul>
-                <li><img id="icon" src="https://i.imgur.com/7wlijwn.png" /></li>
-                <li><img id="icon" src="https://i.imgur.com/kDb3EaE.png" /></li>
-                <li><img id="icon" src="https://i.imgur.com/kd9nnmn.png" /></li>
-                <li><img id="icon" src="https://i.imgur.com/Mw6RZcF.png" /></li>
+                <li><img id="icon" src="https://user-images.githubusercontent.com/28853235/158935682-d89f10c7-86a5-4975-98fa-71071bff82b7.png" /></li>
+                <li><img id="icon" src="https://user-images.githubusercontent.com/28853235/158935678-2b37380a-f93c-4e6e-80d2-2d48eaca2305.png" /></li>
+                <li><img id="icon" src="https://user-images.githubusercontent.com/28853235/158935676-202b21bb-6f57-4151-8a78-a872951c474c.png" /></li>
+                <li><img id="icon" src="https://user-images.githubusercontent.com/28853235/158935680-0cfa8a33-5389-4733-baba-36f851200d77.png" /></li>
             </ul>
     </header>
     <div class="article">
@@ -107,11 +106,13 @@ transition: 2s all ease;
         <p>大家好，我是m10，<i>布鲁斯年历</i>的创始人。</p>
         <p>此网站正在进行维修，我们将为您带来最好的观赏体验。</p>
         <p>在那之前，您可以尽情浏览我们的办公室。</p>
+        <div class="pic">
+            <img class="insite" src="https://user-images.githubusercontent.com/28853235/158911700-426ae6b2-2ee3-4478-8579-e599ff29d403.png">
+            <img class="onTop reveal" src="https://user-images.githubusercontent.com/28853235/158922467-f8596151-2bc2-4355-9e46-c5c6fb8247e1.png">
+        </div>
+    
     </div>
-    <div class="pic">
-        <img class="insite" src="https://user-images.githubusercontent.com/28853235/158911700-426ae6b2-2ee3-4478-8579-e599ff29d403.png">
-        <img class="onTop reveal" src="https://user-images.githubusercontent.com/28853235/158922467-f8596151-2bc2-4355-9e46-c5c6fb8247e1.png">
-    </div>
+
     <div class="article">
         <hr />
         <p>2022/03/17</p>
