--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@ text-align: center;
             font-family: 'Noto Serif SC', serif;
         }
         footer{
-width: 100%;
+    width: 100%;
             margin:0 auto;
             height:40px;
             background: orange;
-text-align: center;
+            text-align: center;
         }
 /*--------------------------*/
 .reveal{
@@ -85,17 +85,20 @@ transition: 2s all ease;
 }
 
 @media(max-width:1400px){
-    .insite{
+.insite
+{
     position:relative;
 
     max-height:500px;
 }
-.onTop{
+.onTop
+{
     right:0;
     left:0;
     margin: auto;
     position:absolute;
     max-height:500px;
+}
 
 }
 @media(max-width:800px){
@@ -112,8 +115,31 @@ transition: 2s all ease;
     left:0;
     margin: auto;
     position:absolute;
-    max-height:300px;
+    max-height:300px;}
 
+}
+@media(max-width:500px){
+    .top {
+            margin: -50px 0 0 0;
+            height: 250px;}
+    .insite{
+    position:relative;
+
+    max-height:200px;
+}
+.games{
+    height: 650px;
+}
+.onTop{
+    right:0;
+    left:0;
+    margin: auto;
+    position:absolute;
+    max-height:200px;}
+    .pic{
+position:relative;
+    height:250px;
+}
 }
 
     </style>
