EN version added

--- a/index.html
+++ b/index.html
@@ -1,151 +1,22 @@
 <!DOCTYPE html>
 <html lang="zh">
+    <link rel="stylesheet" href="mainPageStyle.css">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+SC:wght@300;900&family=ZCOOL+KuaiLe&family=ZCOOL+XiaoWei&display=swap" rel="stylesheet">
-    <style>
-        body {
-            background: #F6F4E7;
-            margin:0;
-
-        }
-
-        header {
-            text-align: center;
-        }
-
-        .top {
-            margin: -50px 0 0 0;
-            height: 700px;
-            background-size: cover;
-            background-image: url("https://user-images.githubusercontent.com/28853235/158935861-fb8f2462-c88c-4d16-8841-2baa9996c33f.png");
-        }
-
-        li {
-            display: inline;
-            padding: 0 40px 0 40px;
-        }
-.pic{
-position:relative;
-    height:850px;
-}
-.insite{
-    position:relative;
-
-    max-height:800px;
-}
-.onTop{
-    right:0;
-    left:0;
-    margin: auto;
-    position:absolute;
-    max-height:800px;
-
-}
-.games{
-    height: 450px;
-text-align: center;
-}
-
-.article {
-            height: auto;
-            border-radius: 10px;
-            margin: 0 50px 0 50px;
-            text-align: center;
-        }
-
-        #icon {
-            height: 100px;
-        }
-
-        h1 {
-            font-family: 'Noto Serif SC', SC;
-        }
-
-        p {
-            font-family: 'Noto Serif SC', serif;
-        }
-        footer{
-    width: 100%;
-            margin:0 auto;
-            height:40px;
-            background: orange;
-            text-align: center;
-        }
-/*--------------------------*/
-.reveal{
-transform: translateY(100px);
-opacity: 0;
-transition: 2s all ease;
-}
-.reveal.active{
-  transform: translateY(0);
-  opacity: 1;
-}
-
-@media(max-width:1400px){
-.insite
-{
-    position:relative;
-
-    max-height:500px;
-}
-.onTop
-{
-    right:0;
-    left:0;
-    margin: auto;
-    position:absolute;
-    max-height:500px;
-}
-
-}
-@media(max-width:800px){
-    .top {
-            margin: -50px 0 0 0;
-            height: 400px;}
-    .insite{
-    position:relative;
-
-    max-height:300px;
-}
-.onTop{
-    right:0;
-    left:0;
-    margin: auto;
-    position:absolute;
-    max-height:300px;}
-
-}
-@media(max-width:500px){
-    .top {
-            margin: -50px 0 0 0;
-            height: 250px;}
-    .insite{
-    position:relative;
-
-    max-height:200px;
-}
-.games{
-    height: 650px;
-}
-.onTop{
-    right:0;
-    left:0;
-    margin: auto;
-    position:absolute;
-    max-height:200px;}
-    .pic{
-position:relative;
-    height:250px;
-}
-}
-
-    </style>
+    
 </head>
 <body>
-    <header><div class="top">yes</div>
+
+    <header><div class="top">
+        <p id = "langOptions"><br><br>
+            <a href="indexEN.html">EN</a>/ZH
+        
+        </p>
+
+    </div>
+
             <ul>
                 <li><img id="icon" src="https://user-images.githubusercontent.com/28853235/158935682-d89f10c7-86a5-4975-98fa-71071bff82b7.png" /></li>
                 <li><img id="icon" src="https://user-images.githubusercontent.com/28853235/158935678-2b37380a-f93c-4e6e-80d2-2d48eaca2305.png" /></li>
